[metadata]
name = nntpub-indigoparadox
version = v0.0.1
description = NNTP proxy for various forum protocols
long_description = file: README.md
long_description_content_type = text/markdown
url = https://codeberg.org/indigoparadox/nntpub
protect_urls =
   Bug Tracker = https://codeberg.org/indigoparadox/nntpub/issues
classifiers =
   Programming Language :: Python :: 3
   Development Status :: 4 - Beta
   License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.6
include_package_data = True
zip_safe = False
install_requires =
   requests

[options.entry_points]
console_scripts =
   nntpub = nntpub.__main__:main
